# MLops1

./: Dockerfile  README.md  api.py  docker-compose.yml  dvc  exp.py  grpc_client.py  grpc_server.py  model_training.py  models_fitting_pb2_grpc.py  pyproject.toml
