[tool.poetry]
name = "exp1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
scikit-learn = "^1.3.1"
catboost = "^1.2.2"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
gunicorn = "^21.2.0"
streamlit = "^1.28.1"
boto3 = "^1.29.3"
clearml = "^1.13.2"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"

[tool.poetry.group.grpc.dependencies]
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"


[tool.poetry.group.test.dependencies]
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"